--- a/ui/src/assets/sass/style.scss
+++ b/ui/src/assets/sass/style.scss
@@ -37,3 +37,6 @@
         background: #02d9ad !important;
         border-color: #02d9ad !important;
     }
+    .card .card-body h3 {
+        color: #FFF
+    }
